resolving issue #702 / top nav column stretching

--- a/src/components/navs/TopNav/TopNav.css
+++ b/src/components/navs/TopNav/TopNav.css
@@ -13,7 +13,7 @@
 
 .top-nav-column {
 	display: table-cell;
-	width: 50%;
+	width: fit-content;
 	height: 64px;
 	vertical-align: middle;
 }
